# Gomoku

./: .gitignore  .npmignore  README.md  babel.config.js  package-lock.json  package.json  webpack.config.js
accueil/: accueil.css  accueil.html  computer.html  username.css
algo/: CMakeLists.txt  Dockerfile  Gomook_Multi_Fred  Gomook_Single_Fred  LICENSE  README.md  ex.txt  script.sh  workspace.code-workspace  zsh_history
algo/.devcontainer/: devcontainer.json
algo/include/: defines.hpp  eval.hpp  minimax.hpp  pattern.hpp  server.hpp  state.hpp  utils.hpp
algo/src/: eval.cpp  main.cpp  minimax.cpp  pattern.cpp  server.cpp  server_sync.cpp  state.cpp  utils.cpp
algo/test/: Client.py  test.py
src/: Captures.js  Communicate.js  GameView.js  Utils.js  accueil.css  accueil.scss  computer.html  humans.html  index.html  index.js  main.css  save.txt
src/form/: computer.html  form.css  form.js  form.scss  humans.html
src/game/: Captures.js  GameView.js  Utils.js  game.css  game.html  game.js  game.scss
